--- a/watertransport/src/main/AndroidManifest.xml
+++ b/watertransport/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SplashActivity">
@@ -29,7 +28,15 @@
         <activity
             android:name=".ui.loginregister.LoginActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.loginregister.RegisterActivity"></activity>
+        <activity
+            android:name=".ui.loginregister.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.loginregister.ForgetPwActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.loginregister.SetPwActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
