--- a/watertransport/build.gradle
+++ b/watertransport/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3-alpha-5'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
