--- a/watertransport/src/main/AndroidManifest.xml
+++ b/watertransport/src/main/AndroidManifest.xml
@@ -2,10 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.watertransport">
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:name=".WtApp"
@@ -37,6 +35,7 @@
         <activity
             android:name=".ui.loginregister.SetPwActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".ui.AddNewOrderActivity" />
     </application>
 
 </manifest>
