--- a/timekit/build.gradle
+++ b/timekit/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
