--- a/watertransport/build.gradle
+++ b/watertransport/build.gradle
@@ -21,13 +21,23 @@ android {
         release {
             buildConfigField("boolean", "LOG_DEBUG", "true")
             buildConfigField "String", "API_URL", '"http://59.110.141.52:8080/water_transport/app/"'
-            minifyEnabled false
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+        disable 'InvalidPackage'
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    packagingOptions {
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
 }
 
@@ -47,4 +57,5 @@ dependencies {
     compile 'com.yqritc:recyclerview-flexibledivider:1.4.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile 'com.tencent.bugly:crashreport:2.6.5'
 }
