--- a/watertransport/src/main/AndroidManifest.xml
+++ b/watertransport/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
         android:name=".WtApp"
@@ -36,12 +40,24 @@
         <activity
             android:name=".ui.loginregister.SetPwActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ui.AddNewOrderActivity" />
-        <activity android:name=".ui.mine.SettingActivity" />
-        <activity android:name=".ui.UserInfoActivity" />
-        <activity android:name=".ui.BoatHostOrderActivity" />
-        <activity android:name=".ui.CargoOwnerOrderActivity" />
-        <activity android:name=".ui.OrderDetailActivity"></activity>
+        <activity
+            android:name=".ui.AddNewOrderActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.mine.SettingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.UserInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.BoatHostOrderActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.CargoOwnerOrderActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.OrderDetailActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
