--- a/timekit/src/main/AndroidManifest.xml
+++ b/timekit/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
-
+        <activity android:name=".ui.TfWebViewActivity" />
     </application>
 
 </manifest>
