--- a/watertransport/build.gradle
+++ b/watertransport/build.gradle
@@ -75,4 +75,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'com.tencent.bugly:crashreport:2.6.5'
+    compile 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
 }
