--- a/timekit/build.gradle
+++ b/timekit/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'me.drakeet.multitype:multitype:3.3.1'
 }
